EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/Schedule_Sessions__c.object-meta.xml
<CustomObject>
    <label>Schedule &amp; Sessions</label>
    <nameField>
        <label>Schedule/Sessions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule &amp; Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>