EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Event_Reference__c.field-meta.xml
<CustomField>
    <fullName>Event_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Master__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Event</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Master__c</referenceTo>
    <relationshipName>Schedule_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>