EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conferences</fullName>
            </value>
            <value>
                <fullName>Seminars</fullName>
            </value>
            <value>
                <fullName>Graduation Parties</fullName>
            </value>
            <value>
                <fullName>Religious Gatherings</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Team Onsites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>