EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/No_Fee__c.field-meta.xml
<CustomField>
    <fullName>No_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Fee</label>
    <type>Checkbox</type>
</CustomField>