EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Schedule_Sessions_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sessions_Id__c</fullName>
    <displayFormat>Session#{000}</displayFormat>
    <label>Schedule/Sessions Id</label>
    <type>AutoNumber</type>
</CustomField>