EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Session_Broucher__c.field-meta.xml
<CustomField>
    <fullName>Session_Broucher__c</fullName>
    <label>Session Broucher</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>