EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Session_Fee__c.field-meta.xml
<CustomField>
    <fullName>Session_Fee__c</fullName>
    <label>Session Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>