EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Session_Link__c.field-meta.xml
<CustomField>
    <fullName>Session_Link__c</fullName>
    <label>Session Link</label>
    <type>TextArea</type>
</CustomField>