EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/Target_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Target_Keywords__c</fullName>
    <label>Target Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>