EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/fields/What_to_Expect_From_Event__c.field-meta.xml
<CustomField>
    <fullName>What_to_Expect_From_Event__c</fullName>
    <label>What to Expect From Event?</label>
    <type>TextArea</type>
</CustomField>