EventsAlumni/force-app/main/default/objects/Schedule_Sessions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Schedule_Sessions_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>End_Date__c</columns>
    <columns>Session_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>